[package]
name = "loaded"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Query for and iterate over loaded shared objects"
authors = ["b0mbie"]

[dependencies]
thiserror = "2.0.16"

[target.'cfg(unix)'.dependencies.libc]
version = "0.2.175"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = [
	"handleapi", "libloaderapi", "processthreadsapi", "psapi", "tlhelp32",
]
